[hat] update README file